Clean up twisty maze of IBMBIDI ifdefs related to HorizontalAlignFrames and fix an RTL alignment bug.  b=131023  r=smontagu  sr=roc